💄 Fix whitespace issues on mobile

--- a/css/contact.css
+++ b/css/contact.css
@@ -84,6 +84,9 @@
 .options-container {
     margin-top: 2.5rem;
 }
+.textarea-input {
+    margin-bottom: 2rem;
+}
 
 /* MEDIA QUERIES */
 @media only screen and (min-width: 600px) {
